--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <main>
   </main>
   <script src="js/data.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/palindrome-number.js"></script>
 </body>
 </html>
