Add solution to search insert from LeetCode.

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
   </main>
   <script src="js/data.js"></script>
   <script src="js/palindrome-number.js"></script>
+  <script src="js/searchInsert.js"></script>
 </body>
 </html>
