--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AJAX Project</title>
+  <title>LeetCode</title>
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/layout.css">
@@ -17,5 +17,6 @@
   <script src="js/data.js"></script>
   <script src="js/palindrome-number.js"></script>
   <script src="js/searchInsert.js"></script>
+  <script src="js/length-of-last-word.js"></script>
 </body>
 </html>
