Add solution to single number from LeetCode.

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
   <script src="js/palindrome-number.js"></script>
   <script src="js/searchInsert.js"></script>
   <script src="js/length-of-last-word.js"></script>
+  <script src="js/single-number.js"></script>
 </body>
 </html>
