Add solution to two sum from LeetCode.

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
   <script src="js/searchInsert.js"></script>
   <script src="js/length-of-last-word.js"></script>
   <script src="js/single-number.js"></script>
+  <script src="js/two-sum.js"></script>
 </body>
 </html>
