--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
   <script src="js/length-of-last-word.js"></script>
   <script src="js/single-number.js"></script>
   <script src="js/two-sum.js"></script>
+  <script src="js/ running-sum.js"></script>
 </body>
 </html>
