Add solution to Best Time to Buy and Sell Stock from LeetCode.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="js/length-of-last-word.js"></script>
   <script src="js/single-number.js"></script>
   <script src="js/two-sum.js"></script>
-  <script src="js/ running-sum.js"></script>
+  <script src="js/running-sum.js"></script>
+  <script src="js/max-profit.js"></script>
 </body>
 </html>
