Add solution to Find Pivot Index from LeetCode.

--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
   <script src="js/two-sum.js"></script>
   <script src="js/running-sum.js"></script>
   <script src="js/max-profit.js"></script>
+  <script src="js/pivotIndex.js"></script>
 </body>
 </html>
