Add solution to Isomorphic Strings from LeetCode.

--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
   <script src="js/running-sum.js"></script>
   <script src="js/max-profit.js"></script>
   <script src="js/pivotIndex.js"></script>
+  <script src="js/isIsomorphic.js"></script>
 </body>
 </html>
