Add solution to Is Subsequence from LeetCode.

--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
   <script src="js/max-profit.js"></script>
   <script src="js/pivotIndex.js"></script>
   <script src="js/isIsomorphic.js"></script>
+  <script src="js/is-subsequence.js"></script>
 </body>
 </html>
