Add solution to Merge Two Lists from LeetCode.

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
   <script src="js/pivotIndex.js"></script>
   <script src="js/isIsomorphic.js"></script>
   <script src="js/is-subsequence.js"></script>
+  <script src="js/merge-two-lists.js"></script>
 </body>
 </html>
