Add solution to Reverse Linked List from LeetCode.

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
   <script src="js/isIsomorphic.js"></script>
   <script src="js/is-subsequence.js"></script>
   <script src="js/merge-two-lists.js"></script>
+  <script src="js/reverseList.js"></script>
 </body>
 </html>
