Add solution to Middle of Linked Lists from LeetCode.

--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
   <script src="js/is-subsequence.js"></script>
   <script src="js/merge-two-lists.js"></script>
   <script src="js/reverseList.js"></script>
+  <script src="js/middle-of-linked-list.js"></script>
 </body>
 </html>
